--- a/miniprogram/pages/message/message.wxml
+++ b/miniprogram/pages/message/message.wxml
@@ -1,6 +1,6 @@
 <view class="message-list">
-    <view class="ben-count" wx:if="{{allMsg.length >= 1}}">已收到{{allMsg.length}}条好友的祝福语</view>
-    <view class="msg-item" wx:for="{{allMsg}}" wx:key="{{index}}">
+    <view class="ben-count" wx:if="{{dataList.length >= 1}}">已收到{{dataList.length}}条好友的祝福语</view>
+    <view class="msg-item" wx:for="{{dataList}}" wx:key="{{index}}">
         <view class="user-photo">
             <image class="userinfo-avatar " src="{{item.avatarUrl}}" />
         </view>
@@ -13,5 +13,5 @@
 </view>
 <view class="message-input">
   <input class="input-box" bindinput="getMsg" value="{{msg}}" bindblur="getMsg" cursor-spacing="10" placeholder-style="color:#ef8783" placeholder="写下你的祝福语❤" />
-  <view class="msg-btn" bind:tap="onAdd">送上祝福</view>
+  <view class="msg-btn" bind:tap="{{flag?'onAdd':''}}">送上祝福</view>
 </view>
